examples/test/testpolicy562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy562
  namespace: namespace20
spec:
  podSelector:
    matchLabels:
      key10: value19
      key14: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value24
          key16: value38
      podSelector:
        matchLabels:
          key9: value43
          key44: value32
          key32: value13
